--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "PWAntonio",
     "short_name": "PWAntonio",
-    "description": "Instrumento",
+    "description": "Instrumento de evaluacion",
     "background_color": "#252e47",
     "theme_color": "#EEE",
     "orientation": "portrait",
